objects/vlocity_ins__OmniScript__c.object
<CustomObject>
    <description>Represents a Vlocity OmniScript. Each Vlocity OmniScript is a declarative script that defines a task-based, guided user process enabling users to get work done efficiently and effectively. OmniScripts can be configured to pull data from Salesforce or any other data source via business services and can execute any business service to launch and interact with server-side business process engines.</description>
    <fields>
        <fullName>vlocity_ins__AdditionalInformation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomJavaScript__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom JavaScript</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataRaptorBundleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataRaptor Bundle</label>
        <referenceTo>vlocity_ins__DRBundle__c</referenceTo>
        <relationshipLabel>Vlocity OmniScripts</relationshipLabel>
        <relationshipName>VlocityOmniScripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataRaptorBundleName__c</fullName>
        <formula>vlocity_ins__DataRaptorBundleId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DataRaptor Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ElementTypeToHTMLTemplateList__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ElementTypeToHTMLTemplateList</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please do not manually modify this field.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsProcedure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsReusable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reusable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSON_Output__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JSON Output</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Spanish (Mexico)</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastPreviewPage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Preview page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcedureKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Procedure Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PropertySet__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_ins__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Marriage License</fullName>
                </value>
                <value>
                    <fullName>Birth Certificate</fullName>
                </value>
                <value>
                    <fullName>Building Permit</fullName>
                </value>
                <value>
                    <fullName>Gun Permit</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                </value>
                <value>
                    <fullName>Amend</fullName>
                </value>
                <value>
                    <fullName>OS-UpdateDNCPreferences</fullName>
                </value>
                <value>
                    <fullName>OS-RequestGN</fullName>
                </value>
                <value>
                    <fullName>OS-AddContact</fullName>
                </value>
                <value>
                    <fullName>OS-NewGN</fullName>
                </value>
                <value>
                    <fullName>OS-Contact Relation</fullName>
                </value>
                <value>
                    <fullName>QuoteLineItemApproval</fullName>
                </value>
                <value>
                    <fullName>OS-RecallQLIApproval</fullName>
                </value>
                <value>
                    <fullName>OS-DeleteChildQLI</fullName>
                </value>
                <value>
                    <fullName>PS-Add Program</fullName>
                </value>
                <value>
                    <fullName>CP-AddServiceProvider</fullName>
                </value>
                <value>
                    <fullName>OS-AccountExtract</fullName>
                </value>
                <value>
                    <fullName>OS-CreateOpportunity</fullName>
                </value>
                <value>
                    <fullName>OS-MassUpdate</fullName>
                </value>
                <value>
                    <fullName>PS-AddProduct</fullName>
                </value>
                <value>
                    <fullName>PS-ProductConfigurator</fullName>
                </value>
                <value>
                    <fullName>PS-ProductConfigurator - General</fullName>
                </value>
                <value>
                    <fullName>PS-ProductConfigurator - Medical</fullName>
                </value>
                <value>
                    <fullName>PS-Product Configurator w Approvals</fullName>
                </value>
                <value>
                    <fullName>PS-ProductConfigurator w Product Selection Details</fullName>
                </value>
                <value>
                    <fullName>OS-UpdateGroup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TestHTMLTemplates__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test custom HTML templates</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Licensing &amp; Permitting</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>ANA Library</fullName>
                </value>
                <value>
                    <fullName>DNC Preferences</fullName>
                </value>
                <value>
                    <fullName>Request GN</fullName>
                </value>
                <value>
                    <fullName>Add Contact</fullName>
                </value>
                <value>
                    <fullName>NewGN</fullName>
                </value>
                <value>
                    <fullName>Contact Relation</fullName>
                </value>
                <value>
                    <fullName>QuoteLineItem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity OmniScript</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity OmniScripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>